<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scrooge</string>
    <string name="how_much_spend">How much did you spend?</string>
    <string name="select_category">Select a category:</string>    
    <string name="hello">Hello!</string>
    <string name="first_time_text">It seems that this is the first time you use Scrooge.\nFirst of all, you have to know that Scrooge stores expenses in categories, eg: Shopping cart, Mortgage, Fuel, etc. You can create a list of default categories now or enter them manually later through the settings tab.</string>
    <string name="use_default_categories">Use default categories</string>
    <string name="input_categories_later">Input categories later</string>
    <string name="input_expense">Input what you spent</string>
    <string name="input_correct_expense">Input a correct amount</string>
    <string name="error_saving_expense">Failed to save the amount entered</string>
    <string name="expense_saved_ok">Amount saved correctly</string>
    <string name="no_category">Not listed</string>
    <string name="input_expense_act">Input expenses</string>
    <string name="report_act">Prepare a report</string>
    <string name="remove_last">Remove last</string>
    <string name="expenses_listing">Expenses list</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
    <string name="show_listing">Show the listing</string>
    <string name="continu">Continue</string>
    <string name="scrooge_v_0_3_0">Scrooge v.0.3.0</string>
    <string name="an_application_to_control_your_expenses">An application to control your expenses</string>
    <string name="made_by_jesus_chicharro">Made by: Jesús Chicharro</string>
    <string name="email">divisionby0x00@gmail.com</string>
    <string name="logo_text">Logo: Juanma \'jmbrodick\' Chicharro</string>
    <string name="url_icons">http://tiheum.deviantart.com/art/Faenza-Icons-173323228</string>
    <string name="license">This is free software and it\'s distributed under the terms of the General Public License (GPL) 3.</string>
    <string name="dedication">This application is dedicated to my two girls, they make me cross a lot but they are what encourage me to keep tinkering ;-)</string>
    <string name="url_license">http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="icon_theme">Icon theme: Faenza</string>
    <string name="categories_not_found">Categories not found</string>
    <string name="expenses_not_found">Expenses not found</string>
    <string name="backups_not_foud">Backups not found</string>
    <string name="not_found_storage_unit">There is no storage drive in the device</string>
    <string name="unable_to_save_backup">"Unable to save the backup file {0} "</string>
    <string name="no_storage_found_or_read_only">There is no storage drive in the device or it is read only</string>
    <string name="last_backup">Last backup: {0}</string>
    <string name="input_name_for_category">You have to input a name for the category</string>
    <string name="category_name_no_more_15c">Category name must not have more than 15 characters.</string>
    <string name="category_exists">The category exists</string>
    <string name="unable_to_add_category">Unable to add the category</string>
    <string name="category_added_correctly">The category has been added correctly</string>
    <string name="do_you_want_to_remove_category">Do you want to remove this category?</string>
    <string name="remove">Remove</string>
    <string name="warning">Warning</string>
    <string name="cant_remove_all_categories_have_to_leave_one">You can\'t remove all categories. At least one category is expected.</string>
    <string name="cancel">Cancel</string>
    <string name="expenses_linked_to_the_category">There are expenses linked with this category. To remove the category it must have no associated expenses. Do you want to remove the expenses and the category?</string>
    <string name="yes_remove">Yes, remove</string>
    <string name="unable_to_remove_expenses_linked_to_the_category"> Failed to delete the expenses associated with the category</string>
    <string name="category_and_expenses_removed_correctly">The expenses and the category have been removed correctly</string>
    <string name="unable_to_remove_category">Failed to remove the category.</string>
    <string name="category_removed_correctly">Category removed successfully</string>
    <string name="do_you_want_to_remove_this_expense">Do you want to remove this expense?</string>
    <string name="expense_removed_correctly">Expense removed successfully</string>
    <string name="unable_to_remove_expense">Failed to remove the expense.</string>
    <string name="amount_no_more_7d">Amount must have less than 8 digits</string>
    <string name="data_not_found">Data not found</string>
    <string name="want_to_remove_expense_input_day_of_category_with_import">Do you want to remove the expense entered on {0} of category {1} with an amount of {2}?</string>
    <string name="delete">Delete</string>
    <string name="dont_delete">Don\'t delete</string>
    <string name="backup_dont_made">There is no backup.</string>
    <string name="this_will_remove_all_data_and_store_new_data">By continuing all existing data will be erased and will be replaced by new ones.</string>
    <string name="there_is_an_error_importing_data">There was an error importing data</string>
    <string name="data_imported_correctly">Data has been imported successfully</string>
    <string name="correct_validation">Correct validation</string>
    <string name="incorrect_validation">Incorrect validation</string>
    <string name="total">Total: {0}</string>
    <string name="cvs_id_expense">Expense id.</string>
    <string name="cvs_id_category">Category id.</string>
    <string name="cvs_category_name">Category name</string>
    <string name="cvs_amount">Amount</string>
    <string name="cvs_date">Date</string>
    <string name="data_exported_to_file_of_persistence_drive">Data has been exported to file {0} of the storage drive successfully.</string>
    <string name="unable_to_save_file">Unable to save the file {0}</string>
    <string name="import_must_not_have_more_than_7d">Amount must be less than 8 digits</string>
    <string name="all_categories">All</string>
    <string name="you_have_to_input_a_date">You have to input a date</string>
    <string name="you_have_to_input_an_amount">You have to input an amount</string>
    <string name="amount_has_to_be_less_than_7d">Amount must be less than 8 digits</string>
    <string name="unable_to_update_expense">Unable to update the expense</string>
    <string name="expense_updated_correctly">Expense has been updated successfully</string>
    <string name="backup_made_correctly">Backup {0} has been made successfully</string>
    <string name="administration">Administration</string>
    <string name="edit_categories">Edit categories</string>
    <string name="edit_expenses">Edit expenses</string>
    <string name="make_a_backup">Make a \nbackup</string>
    <string name="import_backup">Import a\nbackup</string>
    <string name="date">Date</string>
    <string name="expense">Expense</string>
    <string name="categ">categ</string>
    <string name="select_backup_to_restore">Select the backup to restore:</string>
    <string name="import_">Import</string>
    <string name="amount_">Amount:</string>
    <string name="category_">Category:</string>
    <string name="fix_expense">Adjust spending:</string>
    <string name="fix_amount_">Adjust amount:</string>
    <string name="fix_category_">Adjust category:</string>
    <string name="fix_date_">Adjust date:</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="about">About&#8230;</string>
    
</resources>